fix: a11y contrast fix

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -151,6 +151,10 @@ header nav .nav-brand img {
   height: auto;
 }
 
+header nav .nav-brand a {
+  text-decoration: none;
+}
+
 /* sections */
 header nav .nav-sections {
   grid-area: sections;
